ontol/ontol-compiler/test-cases/error/map/regex_duplicate_capture_groups.on
def a (rel .'a': text)
def b ()
map(
    a(
        'a': /(?<dupe>\w+) (?<dupe>\w+)!/ // ERROR invalid regex: duplicate capture group name
    ),
    b()
)
